[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Shadows_Into_Light/ShadowsIntoLight.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/gui/item_info_displayer.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="item_info_displayer" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
theme = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_label" type="Label" parent="."]
margin_right = 52.0
margin_bottom = 41.0
text = "Apple!"
align = 1

[node name="hp_label" type="Label" parent="."]
margin_top = 45.0
margin_right = 52.0
margin_bottom = 130.0
text = "7 hp
"
align = 1

[node name="price_label" type="Label" parent="."]
margin_top = 134.0
margin_right = 52.0
margin_bottom = 175.0
text = "78 $$"
align = 1
